@@ -1,3 +1,8 @@
+2005-07-10 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/scim_canna_imengine_setup.cpp: Set tooltips.
+	* po/ja.po: Update.
+
 2005-05-17 Takuro Ashie <ashie@homa.ne.jp>
 
 	* configure.ac; Sorry, AM_INIT_AUTOMAKE(1.9), not AM_PREREQ.
